wordpress/wordpress-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wordpress
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wordpress
      app.kubernetes.io/name: wordpress
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress
        app.kubernetes.io/name: wordpress
    spec:
      containers:
        - name: wordpress
          image: wordpress:6.1
          resources:
            requests:
              memory: "256Mi"
              cpu: "500m"
            limits:
              memory: "256Mi"
              cpu: "500m"
          ports:
            - containerPort: 80
            - containerPort: 443
          livenessProbe:
            httpGet:
              path: /aGVhbHRoY2hlY2s
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 2
          readinessProbe:
            tcpSocket:
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 2
          volumeMounts:
            - name: wordpress-data
              mountPath: /var/www/html
            - name: config
              mountPath: /etc/apache2/sites-available
            - name: index
              mountPath: /var/www/html/aGVhbHRoY2hlY2s
      volumes:
        - name: wordpress-data
          persistentVolumeClaim:
            claimName: wordpress
        - name: config
          configMap:
            name: wordpress
        - name: index
          configMap:
            name: healthcheck
