wordpress/wordpress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
spec:
  type: NodePort
  selector:
    app: wordpress
    app.kubernetes.io/name: wordpress
  ports:
    - port: 80
      targetPort: 80
