wordpress/wordpress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  tls:
    - hosts:
        - blog.hahajong.store
      secretName: wordpress-tls
  defaultBackend:
    service:
      name: wordpress
      port:
        number: 80
  rules:
    - host: blog.hahajong.store
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress
                port:
                  number: 80
